cmake_minimum_required(VERSION 3.17)
project(Day1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Day1
        main.cpp
        Day1/day1.cpp
        Day2/day2.cpp
        Day3/day3.cpp
        Day4/day4.cpp
        Day5/day5.cpp
        Day6/day6.cpp
        Day7/day7.cpp
        Day8/day8.cpp
        Day9/day9.cpp
        Day10/day20.cpp
        Day11/day11.cpp
        Day12/day12.cpp
        Day13/day13.cpp
        Day14/day14.cpp
        Day15/day15.cpp
        Day16/day16.cpp
        Day17/day17.cpp
        Day18/day18.cpp
        Day19/day19.cpp
        Day20/day20.cpp)